--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dhrubaraj Pati | Computer Engineer</title>
-    <link rel="shortcut icon" href="src/assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="public/favicon/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
@@ -14,7 +14,7 @@
     <script>
       (function() {
         const popup = document.createElement("div");
-        popup.innerHTML = "Created by <strong>Dhrubaraj Pati</strong>";
+        popup.innerHTML = "Maintain by <strong>Dhrubaraj Pati</strong>";
         Object.assign(popup.style, {
           position: "fixed",
           bottom: "20px",
