--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/favicon/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://api.fontshare.com/v2/css?f[]=cabinet-grotesk@800,1&f[]=general-sans@300&f[]=boska@300&f[]=switzer@300&f[]=outfit@600&f[]=poppins@400&f[]=supreme@500&f[]=rowan@400&f[]=quilon@500&f[]=satoshi@500&f[]=ranade@300&f[]=excon@500,900&f[]=synonym@200,300,400,500,600,700,1&f[]=amulya@400,700&f[]=neco@400&f[]=pally@500&f[]=hind@700&display=swap" rel="stylesheet">
   </head>
   <body class="bg-[#0A0A0A]">
     <div id="root"></div>
