--- a/index.html
+++ b/index.html
@@ -2,16 +2,67 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dhrubaraj Pati | Software Developer </title>
-    <link rel="shortcut icon" href="/favicon/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link href="https://api.fontshare.com/v2/css?f[]=cabinet-grotesk@800,1&f[]=general-sans@300&f[]=boska@300&f[]=switzer@300&f[]=outfit@600&f[]=poppins@400&f[]=supreme@500&f[]=rowan@400&f[]=quilon@500&f[]=satoshi@500&f[]=ranade@300&f[]=excon@500,900&f[]=synonym@200,300,400,500,600,700,1&f[]=amulya@400,700&f[]=neco@400&f[]=pally@500&f[]=hind@700&display=swap" rel="stylesheet">
+    <meta name="google-site-verification" content="J2gJDekW5fhtwWcTKOlFmqFhnvKV7TJS9OmSx1-g_Oc" />
+
+    <title>Dhrubaraj Pati | Software Developer</title>
+
+    <!-- Meta Tags -->
+    <meta
+      name="description"
+      content="I'm a Full Stack Web Developer and Open Source Contributor, dedicated to crafting impactful digital products that solve real-world problems. I specialize in building scalable MVPs, blending clean code with thoughtful design to bring ideas to life."
+    />
+    <meta
+      name="keywords"
+      content="Dhrubaraj Pati, Dhrubaraj, Software Developer, Web Developer, Frontend Developer, Portfolio, JavaScript, React"
+    />
+    <meta name="author" content="Dhrubaraj Pati" />
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon/favicon.png" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="/favicon/favicon.png" />
+
+    <!-- Theme Color for Mobile Browsers -->
+    <meta name="theme-color" content="#0A0A0A" />
+
+    <!-- Open Graph / Facebook Meta -->
+    <meta property="og:title" content="Dhrubaraj Pati | Software Developer" />
+    <meta
+      property="og:description"
+      content="Explore the portfolio of Dhrubaraj Pati — showcasing skills, projects, and experiences in software development."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://codewithdhruba.netlify.app/" />
+    <meta property="og:image" content="/assets/profilepic.jpg" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card Meta -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Dhrubaraj Pati | Software Developer" />
+    <meta
+      name="twitter:description"
+      content="Portfolio website of Dhrubaraj Pati — showcasing software development skills and creative work."
+    />
+    <meta name="twitter:image" content="/assets/profilepic.jpg" />
+    <meta name="twitter:creator" content="@codewithdhruba" />
+
+    <!-- Styles & Fonts -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=cabinet-grotesk@800,1&f[]=general-sans@300&f[]=boska@300&f[]=switzer@300&f[]=outfit@600&f[]=poppins@400&f[]=supreme@500&f[]=rowan@400&f[]=quilon@500&f[]=satoshi@500&f[]=ranade@300&f[]=excon@500,900&f[]=synonym@200,300,400,500,600,700,1&f[]=amulya@400,700&f[]=neco@400&f[]=pally@500&f[]=hind@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body class="bg-[#0A0A0A]">
     <div id="root"></div>
+
+    <!-- Scripts -->
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
