--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta name="author" content="Dhrubaraj Pati" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/favicon/favicon.png" type="image/x-icon" />
-    <link rel="icon" type="image/png" href="/favicon/favicon.png" />
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
 
     <!-- Theme Color for Mobile Browsers -->
     <meta name="theme-color" content="#0A0A0A" />
