--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="J2gJDekW5fhtwWcTKOlFmqFhnvKV7TJS9OmSx1-g_Oc" />
+    <link rel="manifest" href="/manifest.json" />
+
 
     <title>Dhrubaraj Pati | Software Developer</title>
 
